[package]
name = "pulsar-rs-producer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
toml = "0.5.8"
tokio = { version = "1.4", features = ["full"] }
futures = "0.3"
pulsar = { git = "https://github.com/omegaphoenix/pulsar-rs.git", branch = "hotfix/add-uncompressed-size", default-features = false, features = ["tokio-runtime", "compression"] }
log = "0.4.14"
thiserror = "1.0.26"
env_logger = "0.9.0"
regex = "1.6.0"
